--- a/That_period_app/app/src/main/res/values/strings.xml
+++ b/That_period_app/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     values-round/strings.xml for round devices.
     -->
     <string name="hello_world">Hello Square World!</string>
+    <string name="you_are">You are</string>
+    <string name="Period_state_ovulation_high">Ovulating</string>
 </resources>
